deployments/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: profibus
  labels:
    name: profibus
    app: profibus
    environment: production
